syntax = "proto3";

package chief_of_state;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: PACKAGE
  preserve_unknown_fields: false
  enum_value_naming: CAMEL_CASE
  enum_strip_prefix: false
};
